<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/shape_corner_four">
    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:text="@string/app_name"
            android:textSize="30dp"
            android:gravity="center"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lay2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/lay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/btnPhoto"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginRight="0.5dp"
                android:layout_weight="1"
                android:text="@string/app_photo"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="bold"
                android:clickable="true"
                android:background="@drawable/shape_btn_l_selector"
                />
            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="0.5dp"
                android:layout_marginRight="0.5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/app_login"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:background="@drawable/shape_btn_m_selector"
                />
            <TextView
                android:id="@+id/btnMessage"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="0.5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/app_message"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:background="@drawable/shape_btn_r_selector"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/btnResign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_resign"
            android:layout_margin="5dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_below="@id/lay"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            />
    </RelativeLayout>
    <!--上边界面-->
    <RelativeLayout
        android:id="@+id/layTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_no"
            android:clickable="true"
            android:background="@drawable/shape_btn_back_selector"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:onClick="listenerNo"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@id/lay2"
        android:layout_below="@id/layTop"
        android:layout_centerInParent="true"

        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/facePhoto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:background="@drawable/shape_img_round"
            android:scaleType="fitXY"
            />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:background="@drawable/shape_corner_round"
            >
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/lay3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/recognizationState"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="#00000000"
                />
            <cn.com.core.tool.CircleProgress
                android:id="@+id/progress"
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:circle_progress="1"
                android:layout_centerInParent="true"
                app:circle_text_size="20dp"
                app:circle_stroke_width="20dp"
                app:circle_finished_color="@color/finished_color"
                app:circle_unfinished_color="@color/unfinished_color"
                app:circle_angle="360" />
        </RelativeLayout>

        <TextView
            android:id="@+id/errorCounts"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignParentTop="true"
            />
    </RelativeLayout>

</RelativeLayout>
