<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/shape_corner_four">

    <LinearLayout
        android:id="@+id/layBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:id="@+id/btnFontPhoto"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/app_font"
            android:layout_marginRight="0.5dp"
            android:clickable="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_l_selector"
            />
        <TextView
            android:id="@+id/btnConfirm"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/app_submit"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/shape_btn_m_selector"
            />
        <TextView
            android:id="@+id/btnBackPhoto"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/app_back"
            android:layout_marginLeft="0.5dp"
            android:clickable="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_r_selector"
            />
    </LinearLayout>
    <!--上边界面-->
    <RelativeLayout
        android:id="@+id/layTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_no"
            android:textSize="20dp"
            android:clickable="true"
            android:background="@drawable/shape_btn_back_selector"
            android:layout_margin="10dp"
            android:onClick="listenerNo"
            />
    </RelativeLayout>
    <!--显示的界面-->
    <LinearLayout
        android:id="@+id/laymid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/layTop"
        android:layout_above="@id/layBottom"
        >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/stateFont"
                android:layout_width="fill_parent"
                android:layout_height="5dp"
                android:layout_alignParentTop="true"
                />
            <TextView
                android:id="@+id/tvFontInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/stateFont"
                />
            <ImageView
                android:id="@+id/ivHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/stateFont"
                android:scaleType="fitXY"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/stateBack"
                android:layout_width="fill_parent"
                android:layout_height="5dp"
                android:layout_alignParentTop="true"
                />
            <TextView
                android:id="@+id/tvBackInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/stateBack"
                />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/layBottom"
        android:layout_below="@id/layTop"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_corner_round2"
        >
        <TextView
            android:id="@+id/btnPhotoUpload"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:textSize="15dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/app_choose_photo"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:background="@drawable/shape_btn_img_up_selector"
            />
    </RelativeLayout>
</RelativeLayout>
