<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layMid"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#4682B4"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <view
            class="cn.com.core.tool.MyRefreshLayout"
            android:id="@+id/refresh_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                >
                <com.youth.banner.Banner
                    android:id="@+id/mbanner"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    />
            </LinearLayout>
        </view>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/shape_corner_menu"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/app_news"
                android:textStyle="bold"
                android:textSize="20dp"
                android:padding="5dp"
                />
            <TextView
                android:id="@+id/btnFlush"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:text="刷新"
                android:textColor="#ffffff"
                android:clickable="true"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="5dp"
                android:background="@drawable/shape_btn_h_menu_selector"
                />
            <TextView
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left"
                android:layout_margin="1dp"
                android:layout_toRightOf="@id/t1"
                android:layout_toLeftOf="@id/btnFlush"
                android:clickable="true"
                android:background="@drawable/shape_btn_item_selector"
                android:textStyle="bold"
                android:textSize="18dp"
                android:padding="5dp"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="fill_parent"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/btnCase"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="true"
                    android:paddingLeft="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/oper_setup"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center|left"
                    android:background="@drawable/shape_btn_h_menu_selector"
                    />
                <TextView
                    android:id="@+id/btnQuery"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="true"
                    android:paddingLeft="50dp"
                    android:layout_marginTop="2.5dp"
                    android:layout_marginBottom="2.5dp"
                    android:layout_weight="1"
                    android:text="@string/oper_query"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center|left"
                    android:background="@drawable/shape_btn_h_menu_selector"
                    />
                <TextView
                    android:id="@+id/btnContact"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="50dp"
                    android:clickable="true"
                    android:layout_marginTop="2.5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/oper_connect"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center|left"
                    android:background="@drawable/shape_btn_h_menu_selector"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
